@@ -1,3 +1,6 @@
+--July 19, 2009--
+- Added merge capabilities to TimeLine class.
+
 --July 17, 2009--
 - TimeLine now is able to create/delete branches, move to a selected commit ( creating also a new
   branch to preserve other commits ), restore the current state to whatever commit ( deleting all
